@@ -1,6 +1,7 @@
 48
 ================
 
+30/12/23 Use compact format for auditing incoming form deletion, indicate processed
 30/12/23 Form tooltips useless on mobile/tablet, move to below label
 27/12/23 Tidy up layout of weekly fosterer email, remove dead space
 27/12/23 PetRescue: stop translating smart quotes, remove doubling of double quotes
